[gd_scene load_steps=2 format=3 uid="uid://cj65cq72o3dj3"]

[ext_resource type="Script" path="res://project/main.gd" id="1_7bysw"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_7bysw")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="PairsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="LeftTextureButton" type="TextureButton" parent="PanelContainer/MarginContainer/PairsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
stretch_mode = 5

[node name="RightTextureButton" type="TextureButton" parent="PanelContainer/MarginContainer/PairsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
stretch_mode = 5

[node name="WinnerContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/WinnerContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 31
text = "Winner!"
horizontal_alignment = 1

[node name="WinnerTextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/WinnerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 5

[node name="WinnerTextureNameLabel" type="Label" parent="PanelContainer/MarginContainer/WinnerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 31
text = "Name"
horizontal_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/WinnerContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Again?"

[node name="FileDialogDir" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/WinnerContainer/Button" to="." method="_on_button_pressed"]
[connection signal="canceled" from="FileDialogDir" to="." method="_on_file_dialog_dir_canceled"]
[connection signal="dir_selected" from="FileDialogDir" to="." method="_on_file_dialog_dir_dir_selected"]
